--- a/package.json
+++ b/package.json
@@ -23,13 +23,8 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "dev": "webpack serve",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives"
   },
   "browserslist": {
     "production": [
@@ -50,8 +45,14 @@
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-css-modules": "^2.12.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "ts-loader": "^9.5.1",
