--- a/package.json
+++ b/package.json
@@ -55,6 +55,11 @@
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "stylelint": "^15.11.0",
+    "stylelint-config-clean-order": "^5.2.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-order": "^6.0.3",
+    "stylelint-prettier": "^4.1.0",
     "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
     "webpack": "^5.89.0",
