--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives"
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives",
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix"
   },
   "browserslist": {
     "production": [
