add babel.config to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "webpack.config.js"]
+  "include": ["src", "webpack.config.js", "babel.config.js"]
 }
