--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
-    "antd": "^5.11.4",
     "axios": "^1.6.2",
     "core-js": "^3.33.3",
     "normalize.css": "^8.0.1",
@@ -18,8 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "build": "webpack --mode production",
