--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.2",
+    "classnames": "^2.3.2",
     "core-js": "^3.33.3",
     "normalize.css": "^8.0.1",
     "postcss-loader": "^7.3.3",
