--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --env mode=production",
     "dev": "webpack serve",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives",
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix"
@@ -55,6 +55,7 @@
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
     "stylelint": "^15.11.0",
     "stylelint-config-clean-order": "^5.2.0",
     "stylelint-config-standard-scss": "^11.1.0",
