chore: add normalize.css to ignore for stylelint

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,5 +3,6 @@
   "rules": {
     "selector-class-pattern": null,
     "scss/double-slash-comment-whitespace-inside": "always"
-  }
+  },
+  "ignoreFiles": ["**/normalize.css"]
 }
