--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,35 @@
     "react/button-has-type": 1, // 'submit' is default so unexpected submit event can occure
     "import/no-extraneous-dependencies": 0, // we know better where to install packages
     "css-modules/no-unused-class": [1, { "camelCase": true }],
-    "css-modules/no-undef-class": [2, { "camelCase": true }]
+    "css-modules/no-undef-class": [2, { "camelCase": true }],
+    "jsx-a11y/control-has-associated-label": [
+      2,
+      {
+        "labelAttributes": ["label"],
+        "controlComponents": ["CustomComponent"],
+        "ignoreElements": [
+          "button" //not every btn deserves label
+          // "audio",
+          // "canvas",
+          // "embed",
+          // "input",
+          // "textarea",
+          // "tr",
+          // "video"
+        ],
+        "ignoreRoles": [
+          // "grid",
+          // "listbox",
+          // "menu",
+          // "menubar",
+          // "radiogroup",
+          // "row",
+          // "tablist",
+          // "toolbar",
+          // "tree",
+          // "treegrid"
+        ]
+      }
+    ]
   }
 }
