--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "react/button-has-type": 1, // 'submit' is default so unexpected submit event can occure
     "import/no-extraneous-dependencies": 0, // we know better where to install packages
     "css-modules/no-unused-class": [1, { "camelCase": true }],
-    "css-modules/no-undef-class": [2, { "camelCase": true }]
+    "css-modules/no-undef-class": [2, { "camelCase": true }],
+    "react/jsx-props-no-spreading": "off"
   }
 }
