--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build": "webpack --env mode=production",
     "dev": "webpack serve",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build -c ./config/storybook"
   },
   "browserslist": {
     "production": [
@@ -34,6 +36,15 @@
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@storybook/addon-essentials": "^7.6.4",
+    "@storybook/addon-interactions": "^7.6.4",
+    "@storybook/addon-links": "^7.6.4",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.4",
+    "@storybook/preset-create-react-app": "^7.6.4",
+    "@storybook/react": "^7.6.4",
+    "@storybook/react-webpack5": "^7.6.4",
+    "@storybook/test": "^7.6.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -49,11 +60,14 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "^3.1.0",
+    "prop-types": "^15.8.1",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
+    "storybook": "^7.6.4",
     "style-loader": "^3.3.3",
     "stylelint": "^15.11.0",
     "stylelint-config-clean-order": "^5.2.0",
