--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "dev": "webpack serve",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx --report-unused-disable-directives",
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "build-storybook": "storybook build -c ./config/storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "browserslist": {
     "production": [
